k8s/express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-depl
  labels:
    app: express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - name: express
          image: mongo-express:1.0.2
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  selector:
    app: express
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8085
      nodePort: 31000
