k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
  labels:
    app: nats
spec:
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.10.22
          ports:
            - containerPort: 4222

---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: nats
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
